--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="logo">
+            <p>WIHVI</p>
+        </div>
+        <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">My Skills</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
