introduction section added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Introduction -->
+    <section class="intro" id="home">
+        <h1 class="section__title section__title--intro">
+            Hi, I am <strong>Mihai Cojocaru</strong>
+        </h1>
+        <p class="section__subtitle section__subtitle-intro">web developer</p>
+        <img src="./images/mihai-01.jpg" alt="a picture of Mihai Cojocaru">
+    </section>
 </body>
 
 </html>
