my skills section added

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">My Skills</a></li>
+                <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="skills" class="nav__link">My Skills</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
             </ul>
@@ -34,6 +34,31 @@
         </h1>
         <p class="section__subtitle section__subtitle-intro">web developer</p>
         <img src="./images/mihai-01.jpg" alt="a picture of Mihai Cojocaru">
+    </section>
+
+    <!-- My Skills -->
+    <section class="my-skills" id="skills">
+        <h2 class="section__title section__title--skills">My Skills</h2>
+        <div class="skills">
+            <div>
+                <i class="fa-brands fa-html5"></i>
+            </div>
+            <div>
+                <i class="fa-brands fa-css3-alt"></i>
+            </div>
+            <div>
+                <i class="fa-brands fa-js"></i>
+            </div>
+            <div>
+                <i class="fa-brands fa-react"></i>
+            </div>
+            <div>
+                <i class="fa-brands fa-git-alt"></i>
+            </div>
+            <div>
+                <i class="fa-brands fa-node-js"></i>
+            </div>
+        </div>
     </section>
 </body>
 
