--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="skills" class="nav__link">My Skills</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
             </ul>
         </nav>
@@ -59,6 +59,31 @@
                 <i class="fa-brands fa-node-js"></i>
             </div>
         </div>
+    </section>
+
+    <!-- About me -->
+    <section class="about-me" id="about">
+        <h2 class="section__title section__title--about">Who I am</h2>
+        <p class="section__subtitle section__subtitle-about">
+            I was a Cheque Processor in a past life &
+            now I enjoy learning Web Development
+        </p>
+        <div class="about-me__body">
+            <p>
+                My journey to become a Web Developer started in November 2021 when
+                I decided to quit my job and start learning Web Development.
+            </p>
+            <p>
+                I am focusing my attention to Web Development because I love to
+                learn! Working hard is very much part of my personality and in the
+                short time I have been studying Frontend Development I am very
+                happy with what I have managed to achieve. At the same time I am
+                fully aware that I will have to continue learning and growing if I
+                want to succeed and that is honestly what attracts me to the
+                industry.
+            </p>
+        </div>
+        <img src="./images/mihai-02.jpg" alt="a picture of Mihai Cojocaru">
     </section>
 </body>
 
