--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="skills" class="nav__link">My Skills</a></li>
                 <li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+                <li class="nav__item"><a href="work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +32,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Mihai Cojocaru</strong>
         </h1>
-        <p class="section__subtitle section__subtitle-intro">web developer</p>
+        <p class="section__subtitle section__subtitle--intro">web developer</p>
         <img src="./images/mihai-01.jpg" alt="a picture of Mihai Cojocaru">
     </section>
 
@@ -64,7 +64,7 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle-about">
+        <p class="section__subtitle section__subtitle--about">
             I was a Cheque Processor in a past life &
             now I enjoy learning Web Development
         </p>
@@ -84,6 +84,38 @@
             </p>
         </div>
         <img src="./images/mihai-02.jpg" alt="a picture of Mihai Cojocaru">
+    </section>
+
+    <!-- My Work -->
+    <section class="my-work" id="work">
+        <h2 class="section__title section__title--work">My work</h2>
+        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
+        <div class="portfolio">
+            <div class="portfolio__item">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+            </div>
+            <div class="portfolio__item">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+            </div>
+            <div class="portfolio__item">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+            </div>
+            <div class="portfolio__item">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+            </div>
+            <div class="portfolio__item">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+            </div>
+            <div class="portfolio__item">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+            </div>
+            <div class="portfolio__item">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+            </div>
+            <div class="portfolio__item">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+            </div>
+        </div>
     </section>
 </body>
 
