footer section added

--- a/index.html
+++ b/index.html
@@ -117,6 +117,29 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <a href="mailto:mihai.cojocaru86@yahoo.com" class="footer__link">mihai.cojocaru86@yahoo.com</a>
+        <ul class="social-list">
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://www.linkedin.com/in/mihai-cojocaru-b67375189/"
+                    target="_blank">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://www.facebook.com/mihai.cojocaru.10" target="_blank">
+                    <i class="fa-brands fa-square-facebook"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://github.com/WIHVI" target="_blank">
+                    <i class="fa-brands fa-square-github"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
