--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="skills" class="nav__link">My Skills</a></li>
-                <li class="nav__item"><a href="about" class="nav__link">About Me</a></li>
-                <li class="nav__item"><a href="work" class="nav__link">My Work</a></li>
+                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#skills" class="nav__link">My Skills</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
             Hi, I am <strong>Mihai Cojocaru</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">web developer</p>
-        <img src="./images/mihai-01.jpg" alt="a picture of Mihai Cojocaru">
+        <img src="./images/mihai-01.jpg" alt="a picture of Mihai Cojocaru" class="intro__img">
     </section>
 
     <!-- My Skills -->
