my skills section css added

--- a/index.html
+++ b/index.html
@@ -43,23 +43,33 @@
     <section class="my-skills" id="skills">
         <h2 class="section__title section__title--skills">My Skills</h2>
         <div class="skills">
-            <div>
+            <div class="skills__icons">
                 <i class="fa-brands fa-html5"></i>
+                <p>HTML5</p>
             </div>
-            <div>
+            <div class="skills__icons">
                 <i class="fa-brands fa-css3-alt"></i>
+                <p>CSS3</p>
             </div>
-            <div>
+            <div class="skills__icons">
                 <i class="fa-brands fa-js"></i>
+                <p>JavaScript</p>
             </div>
-            <div>
+            <div class="skills__icons">
                 <i class="fa-brands fa-react"></i>
+                <p>ReactJs</p>
             </div>
-            <div>
-                <i class="fa-brands fa-git-alt"></i>
-            </div>
-            <div>
+            <div class="skills__icons">
                 <i class="fa-brands fa-node-js"></i>
+                <p>NodeJs</p>
+            </div>
+            <div class="skills__icons">
+                <i class="fa-brands fa-git-alt"></i>
+                <p>GIT</p>
+            </div>
+            <div class="skills__icons">
+                <i class="fa-brands fa-github"></i>
+                <p>GitHub</p>
             </div>
         </div>
     </section>
