about me section css added

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 industry.
             </p>
         </div>
-        <img src="./images/mihai-02.jpg" alt="a picture of Mihai Cojocaru">
+        <img src="./images/mihai-02.jpg" alt="a picture of Mihai Cojocaru" class="about-me__img">
     </section>
 
     <!-- My Work -->
