my work section css added

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <script src="https://kit.fontawesome.com/10d93cfb31.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <title>Mihai Cojocaru</title>
 </head>
 
@@ -23,9 +23,15 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#skills" class="nav__link">My Skills</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+                <li class="nav__item">
+                    <a href="#skills" class="nav__link">My Skills</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#about" class="nav__link">About Me</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#work" class="nav__link">My Work</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -36,7 +42,7 @@
             Hi, I am <strong>Mihai Cojocaru</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro">web developer</p>
-        <img src="./images/mihai-01.jpg" alt="a picture of Mihai Cojocaru" class="intro__img">
+        <img src="./images/mihai-01.jpg" alt="a picture of Mihai Cojocaru" class="intro__img" />
     </section>
 
     <!-- My Skills -->
@@ -78,55 +84,66 @@
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
         <p class="section__subtitle section__subtitle--about">
-            I was a Cheque Processor in a past life &
-            now I enjoy learning Web Development
+            I was a Cheque Processor in a past life & now I enjoy learning Web
+            Development
         </p>
         <div class="about-me__body">
             <p>
-                My journey to become a Web Developer started in November 2021 when
-                I decided to quit my job and start learning Web Development.
+                My journey to become a Web Developer started in November 2021 when I
+                decided to quit my job and start learning Web Development.
             </p>
             <p>
-                I am focusing my attention to Web Development because I love to
-                learn! Working hard is very much part of my personality and in the
-                short time I have been studying Frontend Development I am very
-                happy with what I have managed to achieve. At the same time I am
-                fully aware that I will have to continue learning and growing if I
-                want to succeed and that is honestly what attracts me to the
-                industry.
+                I am focusing my attention to Web Development because I love to learn!
+                Working hard is very much part of my personality and in the short time
+                I have been studying Frontend Development I am very happy with what I
+                have managed to achieve. At the same time I am fully aware that I will
+                have to continue learning and growing if I want to succeed and that is
+                honestly what attracts me to the industry.
             </p>
         </div>
-        <img src="./images/mihai-02.jpg" alt="a picture of Mihai Cojocaru" class="about-me__img">
+        <img src="./images/mihai-02.jpg" alt="a picture of Mihai Cojocaru" class="about-me__img" />
     </section>
 
     <!-- My Work -->
     <section class="my-work" id="work">
         <h2 class="section__title section__title--work">My work</h2>
-        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
+        <p class="section__subtitle section__subtitle--work">
+            A selection of my range of work
+        </p>
         <div class="portfolio">
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <div class="portfolio__item--overlay">
+                    <h3 class="section__title">Title</h3>
+                    <p>
+                        I am focusing my attention to Web Development because I love to
+                        learn! Working hard is very much part of my personality and in the
+                        short time I have been
+                    </p>
+                    <a href="#" class="btn">See Live</a>
+                    <a href="#" class="btn">Source Code</a>
+                </div>
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img">
+                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
             </div>
         </div>
     </section>
