--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
         <a href="mailto:mihai.cojocaru86@yahoo.com" class="footer__link">mihai.cojocaru86@yahoo.com</a>
         <ul class="social-list">
             <li class="social-list__item">
