--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <script src="https://kit.fontawesome.com/10d93cfb31.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet" />
     <title>Mihai Cojocaru</title>
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="logo">
-            <p><i class="fa-regular fa-code"></i> MIHAI</p>
+            <p>MIHAI</p>
+            <i class="fa-solid fa-code"></i>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
