--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </p>
         <div class="portfolio">
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <img src="./images/portfolio-website.png" alt="" class="portfolio__img" />
                 <div class="portfolio__item--overlay">
                     <h3 class="section__title">Title</h3>
                     <p>
@@ -121,30 +121,29 @@
                         learn! Working hard is very much part of my personality and in the
                         short time I have been
                     </p>
-                    <a href="#" class="btn">See Live</a>
                     <a href="#" class="btn">Source Code</a>
                 </div>
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <img src="./images/movie-explorer.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <img src="./images/calculator.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <img src="./images/blog.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <img src="./images/la-metro-map.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <img src="./images/tasks-app.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <img src="./images/landing-page.jpg" alt="" class="portfolio__img" />
             </div>
             <div class="portfolio__item">
-                <img src="./images/portfolio-01.jpg" alt="" class="portfolio__img" />
+                <img src="./images/color-app.jpg" alt="" class="portfolio__img" />
             </div>
         </div>
     </section>
