my work projects added

--- a/index.html
+++ b/index.html
@@ -115,35 +115,100 @@
             <div class="portfolio__item">
                 <img src="./images/portfolio-website.png" alt="" class="portfolio__img" />
                 <div class="portfolio__item--overlay">
-                    <h3 class="section__title">Title</h3>
+                    <h3 class="section__title">My Portfolio Website</h3>
                     <p>
-                        I am focusing my attention to Web Development because I love to
-                        learn! Working hard is very much part of my personality and in the
-                        short time I have been
+                        My personal portfolio where you can find my work, my skills and a
+                        little bit about myself.
                     </p>
-                    <a href="#" class="btn">Source Code</a>
+                    <a href="https://github.com/WIHVI/personal-portfolio" class="btn" target="_blank">Source Code</a>
                 </div>
             </div>
             <div class="portfolio__item">
                 <img src="./images/movie-explorer.jpg" alt="" class="portfolio__img" />
+                <div class="portfolio__item--overlay">
+                    <h3 class="section__title">Movie Explorer</h3>
+                    <p>
+                        A React website which dynamically displays popular, top rated
+                        movies and a description page for each movie. Features TMDB API,
+                        Hooks, Router and functional components.
+                    </p>
+                    <a href="https://wihvi.github.io/movie-explorer-app/" class="btn" target="_blank">See Live</a>
+                    <a href="https://github.com/WIHVI/movie-explorer-app" class="btn" target="_blank">Source Code</a>
+                </div>
             </div>
             <div class="portfolio__item">
                 <img src="./images/calculator.jpg" alt="" class="portfolio__img" />
+                <div class="portfolio__item--overlay">
+                    <h3 class="section__title">Calculator</h3>
+                    <p>
+                        A JavaScript application I have built for a Frontend Development
+                        Industry Training Course, featuring JavaScript Document Object
+                        Model and CSS Grid.
+                    </p>
+                    <a href="https://wihvi.github.io/brainnest-calculator/" class="btn" target="_blank">See Live</a>
+                    <a href="https://github.com/WIHVI/brainnest-calculator" class="btn" target="_blank">Source Code</a>
+                </div>
             </div>
             <div class="portfolio__item">
                 <img src="./images/blog.jpg" alt="" class="portfolio__img" />
+                <div class="portfolio__item--overlay">
+                    <h3 class="section__title">Blog</h3>
+                    <p>
+                        My first React project, I really enjoyed the process of creating
+                        it. Learned more about Components, Props, Hooks, Custom Hooks, 
+                        Router, Links, Route Parameters.
+                    </p>
+                    <a href="https://react-wabk4k.stackblitz.io" class="btn" target="_blank">See Live</a>
+                    <a href="https://github.com/WIHVI/react-blog" class="btn" target="_blank">Source Code</a>
+                </div>
             </div>
             <div class="portfolio__item">
                 <img src="./images/la-metro-map.jpg" alt="" class="portfolio__img" />
+                <div class="portfolio__item--overlay">
+                    <h3 class="section__title">LA Metro Map</h3>
+                    <p>
+                        A JavaScript application which generates the coordinates
+                        for Los Angeles Metro, featuring Google Maps API.
+                    </p>
+                    <a href="https://wihvi.github.io/la-metro-map/" class="btn" target="_blank">See Live</a>
+                    <a href="https://github.com/WIHVI/la-metro-map" class="btn" target="_blank">Source Code</a>
+                </div>
             </div>
             <div class="portfolio__item">
                 <img src="./images/tasks-app.jpg" alt="" class="portfolio__img" />
+                <div class="portfolio__item--overlay">
+                    <h3 class="section__title">Tasks App</h3>
+                    <p>
+                        A react application that could be used for creating tasks,
+                        featuring controlled forms, Hooks and class components.
+                    </p>
+                    <a href="https://react-tasks-app.stackblitz.io" class="btn" target="_blank">See Live</a>
+                    <a href="https://github.com/WIHVI/react-tasks-app" class="btn" target="_blank">Source Code</a>
+                </div>
             </div>
             <div class="portfolio__item">
                 <img src="./images/landing-page.jpg" alt="" class="portfolio__img" />
+                <div class="portfolio__item--overlay">
+                    <h3 class="section__title">Landing Page</h3>
+                    <p>
+                        A fully responsive landing page featuring JavaScript Document Object
+                        Model, CSS Grid, Flex Box and a hamburger menu.
+                    </p>
+                    <a href="https://wihvi.github.io/landing-page/" class="btn" target="_blank">See Live</a>
+                    <a href="https://github.com/WIHVI/landing-page" class="btn" target="_blank">Source Code</a>
+                </div>
             </div>
             <div class="portfolio__item">
                 <img src="./images/color-app.jpg" alt="" class="portfolio__img" />
+                <div class="portfolio__item--overlay">
+                    <h3 class="section__title">Guess the Color</h3>
+                    <p>
+                        A react application featuring functional components, Hooks
+                        and could be used for developing your RGB knowledge skills :)
+                    </p>
+                    <a href="https://guess-the-color.stackblitz.io" class="btn" target="_blank">See Live</a>
+                    <a href="https://github.com/WIHVI/react-color-app" class="btn" target="_blank">Source Code</a>
+                </div>
             </div>
         </div>
     </section>
