--- a/index.html
+++ b/index.html
@@ -215,7 +215,6 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="mailto:mihai.cojocaru86@yahoo.com" class="footer__link">mihai.cojocaru86@yahoo.com</a>
         <ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link" href="https://www.linkedin.com/in/mihai-cojocaru-b67375189/"
@@ -231,6 +230,11 @@
             <li class="social-list__item">
                 <a class="social-list__link" href="https://github.com/WIHVI" target="_blank">
                     <i class="fa-brands fa-square-github"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="mailto:mihai.cojocaru86@yahoo.com">
+                    <i class="fa-solid fa-envelope"></i>
                 </a>
             </li>
         </ul>
