--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <script src="https://kit.fontawesome.com/10d93cfb31.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet" />
@@ -15,8 +16,13 @@
 <body>
     <header class="header">
         <div class="logo">
+            <span class="material-symbols-outlined">
+                chevron_left
+            </span>
             <p>MIHAI</p>
-            <i class="fa-solid fa-code"></i>
+            <span class="material-symbols-outlined">
+                chevron_right
+            </span>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
