my work section updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
     <script src="https://kit.fontawesome.com/10d93cfb31.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet" />
@@ -16,13 +17,9 @@
 <body>
     <header class="header">
         <div class="logo">
-            <span class="material-symbols-outlined">
-                chevron_left
-            </span>
+            <span class="material-symbols-outlined"> chevron_left </span>
             <p>MIHAI</p>
-            <span class="material-symbols-outlined">
-                chevron_right
-            </span>
+            <span class="material-symbols-outlined"> chevron_right </span>
         </div>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
@@ -130,8 +127,8 @@
                 <div class="portfolio__item--overlay">
                     <h3 class="section__title">Movie Explorer</h3>
                     <p>
-                        A React website which dynamically displays popular, top rated
-                        movies and a description page for each movie. Features TMDB API,
+                        A React website which dynamically displays a range of movies
+                        and a description page for each movie. Features TMDB API,
                         Hooks, Router and functional components.
                     </p>
                     <a href="https://wihvi.github.io/movie-explorer-app/" class="btn" target="_blank">See Live</a>
@@ -139,16 +136,16 @@
                 </div>
             </div>
             <div class="portfolio__item">
-                <img src="./images/calculator.jpg" alt="" class="portfolio__img" />
+                <img src="./images/solar-system.jpg" alt="" class="portfolio__img" />
                 <div class="portfolio__item--overlay">
-                    <h3 class="section__title">Calculator</h3>
+                    <h3 class="section__title">Planets</h3>
                     <p>
-                        A JavaScript application I have built for a Frontend Development
-                        Industry Training Course, featuring JavaScript Document Object
-                        Model and CSS Grid.
+                        A JavaScript landing page which fetches data from an external API
+                        and displays information about the eight planets from our Solar
+                        System.
                     </p>
-                    <a href="https://wihvi.github.io/brainnest-calculator/" class="btn" target="_blank">See Live</a>
-                    <a href="https://github.com/WIHVI/brainnest-calculator" class="btn" target="_blank">Source Code</a>
+                    <a href="https://wihvi.github.io/planets/" class="btn" target="_blank">See Live</a>
+                    <a href="https://github.com/WIHVI/planets" class="btn" target="_blank">Source Code</a>
                 </div>
             </div>
             <div class="portfolio__item">
@@ -157,7 +154,7 @@
                     <h3 class="section__title">Blog</h3>
                     <p>
                         My first React project, I really enjoyed the process of creating
-                        it. Learned more about Components, Props, Hooks, Custom Hooks, 
+                        it. Learned more about Components, Props, Hooks, Custom Hooks,
                         Router, Links, Route Parameters.
                     </p>
                     <a href="https://react-wabk4k.stackblitz.io" class="btn" target="_blank">See Live</a>
@@ -169,8 +166,8 @@
                 <div class="portfolio__item--overlay">
                     <h3 class="section__title">LA Metro Map</h3>
                     <p>
-                        A JavaScript application which generates the coordinates
-                        for Los Angeles Metro, featuring Google Maps API.
+                        A JavaScript application which generates the coordinates for Los
+                        Angeles Metro, featuring Google Maps API.
                     </p>
                     <a href="https://wihvi.github.io/la-metro-map/" class="btn" target="_blank">See Live</a>
                     <a href="https://github.com/WIHVI/la-metro-map" class="btn" target="_blank">Source Code</a>
@@ -186,30 +183,6 @@
                     </p>
                     <a href="https://react-tasks-app.stackblitz.io" class="btn" target="_blank">See Live</a>
                     <a href="https://github.com/WIHVI/react-tasks-app" class="btn" target="_blank">Source Code</a>
-                </div>
-            </div>
-            <div class="portfolio__item">
-                <img src="./images/landing-page.jpg" alt="" class="portfolio__img" />
-                <div class="portfolio__item--overlay">
-                    <h3 class="section__title">Landing Page</h3>
-                    <p>
-                        A fully responsive landing page featuring JavaScript Document Object
-                        Model, CSS Grid, Flex Box and a hamburger menu.
-                    </p>
-                    <a href="https://wihvi.github.io/landing-page/" class="btn" target="_blank">See Live</a>
-                    <a href="https://github.com/WIHVI/landing-page" class="btn" target="_blank">Source Code</a>
-                </div>
-            </div>
-            <div class="portfolio__item">
-                <img src="./images/color-app.jpg" alt="" class="portfolio__img" />
-                <div class="portfolio__item--overlay">
-                    <h3 class="section__title">Guess the Color</h3>
-                    <p>
-                        A react application featuring functional components, Hooks
-                        and could be used for developing your RGB knowledge skills :)
-                    </p>
-                    <a href="https://guess-the-color.stackblitz.io" class="btn" target="_blank">See Live</a>
-                    <a href="https://github.com/WIHVI/react-color-app" class="btn" target="_blank">Source Code</a>
                 </div>
             </div>
         </div>
